modified:   .DS_Store 	modified:   files.php 	modified:   index.css 	modified:   index.js 	modified:   index.php 	deleted:    telescope-images/chandra/.DS_Store 	deleted:    telescope-images/hubble/.DS_Store 	deleted:    telescope-images/juno/.DS_Store 	deleted:    telescope-images/jwst/.DS_Store 	deleted:    telescope-images/spitzer/.DS_Store 	renamed:    telescope-images/voyager2/voyager-01.jpg -> telescope-images/voyager/voyager-01.jpg 	renamed:    telescope-images/voyager2/voyager-02.png -> telescope-images/voyager/voyager-02.png 	renamed:    telescope-images/voyager2/voyager-03.png -> telescope-images/voyager/voyager-03.png 	deleted:    telescope-images/voyager2/.DS_Store

--- a/index.css
+++ b/index.css
@@ -1,10 +1,37 @@
 body {
-    background-color: lightblue;
+    background: #355C7D;  
+    background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);
 }
 
 img {
-    width: 300px;
+    width: 100%;
     height: 100%;
+}
+
+#navbar {
+    text-align: center;
+    position: absolute;
+    margin-right: auto;
+    margin-left: auto;
+    left: 0;
+    right: 0;
+    border: black solid 1px;
+    background-color: white;
+    width: 80vw
+}
+
+li { 
+    display: inline;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border: black solid 1px;
+}
+
+li:hover {
+    opacity: 0.5;
+    cursor: pointer;
 }
 
 #grid {
@@ -20,11 +47,26 @@ img {
     width: 95vw;
 }
 
+#question {
+    position: relative;
+    text-align: center;
+    padding-top: 15vh;
+    font-size: 24px;
+    font-family: monospace;
+
+}
+
 .options {
+    background-color: black;;
     overflow: hidden;
     overflow-y: scroll;
     text-align: center;
-    border: black solid 1px;
+    border: white solid 5px;
     width: 100%;
     height: 70vh;
+}
+
+.options:hover {
+    cursor: pointer;
+    transform: scale(1.05, 1.05);
 }
